--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 NODE_ENV=production
-BASE_URL=https://better-call.dev/
-VUE_APP_API_URI=https://api.better-call.dev/v1
+BASE_URL=https://better-call.mavryk.io/
+VUE_APP_API_URI=https://api-better-call.mavryk.io/v1
 VUE_APP_SEARCH_SERVICE_URI=https://search.dipdup.net
 VUE_APP_TOKEN_METADATA_API=https://metadata.dipdup.net
 VUE_APP_METADATA_API_URI=https://metadata.dipdup.net
