--- a/configs/development.yml
+++ b/configs/development.yml
@@ -1,24 +1,24 @@
 rpc:
-  mainnet:
-    uri: ${MAINNET_RPC_URI:-https://rpc.tzkt.io/mainnet}
-    timeout: 20
-    requests_per_second: 15
-  ghostnet:
-    uri: https://rpc.tzkt.io/ghostnet
-    timeout: 20
-    requests_per_second: 15
-  oxfordnet:
-    uri: https://rpc.tzkt.io/oxfordnet
+  # mainnet:
+  #   uri: ${MAINNET_RPC_URI:-https://rpc.tzkt.io/mainnet}
+  #   timeout: 20
+  #   requests_per_second: 15
+  # ghostnet:
+  #   uri: https://rpc.tzkt.io/ghostnet
+  #   timeout: 20
+  #   requests_per_second: 15
+  atlasnet:
+    uri: https://rpc.mavryk.network/atlasnet
     timeout: 20
     requests_per_second: 20
 
 log_level: ${LOG_LEVEL:-info}
 
 services:
-  mainnet:
-    mempool: https://mempool.dipdup.net/v1/graphql
-  ghostnet:
-    mempool: https://mempool.test.dipdup.net/v1/graphql
+  # mainnet:
+  #   mempool: https://mempool.dipdup.net/v1/graphql
+  # ghostnet:
+  #   mempool: https://mempool.test.dipdup.net/v1/graphql
   oxfordnet:
     mempool: https://mempool.test.dipdup.net/v1/graphql
 
@@ -55,27 +55,27 @@ api:
     mempool_enabled: true
     sandbox_mode: false
     rpc:
-      mainnet: https://rpc.tzkt.io/mainnet
-      ghostnet: https://rpc.tzkt.io/ghostnet
-      oxfordnet: https://rpc.tzkt.io/oxfordnet       
+      # mainnet: https://rpc.tzkt.io/mainnet
+      # ghostnet: https://rpc.tzkt.io/ghostnet
+      atlasnet: https://rpc.mavryk.network/atlasnet       
   networks:
-    - mainnet
-    - ghostnet
-    - oxfordnet
+    # - mainnet
+    # - ghostnet
+    - atlasnet
 
 indexer:
   project_name: indexer
   sentry_enabled: false
   networks:
-    mainnet:
-      receiver_threads: 5
-    ghostnet:
-      receiver_threads: 5
-    oxfordnet:
+    # mainnet:
+    #   receiver_threads: 5
+    # ghostnet:
+    #   receiver_threads: 5
+    atlasnet:
       receiver_threads: 10
 
 scripts:
   networks:
-    - mainnet
-    - ghostnet
-    - oxfordnet
+    # - mainnet
+    # - ghostnet
+    - atlasnet
