Support added for Atlas update

--- a/configs/development.yml
+++ b/configs/development.yml
@@ -1,32 +1,38 @@
 rpc:
-  mainnet:
-    uri: https://rpc.tzkt.io/archive
-    timeout: 20
-    requests_per_second: 15
-  ghostnet:
-    uri: https://rpc.tzkt.io/ghostnet
-    timeout: 20
-    requests_per_second: 15
-  nairobinet:
-    uri: https://rpc.tzkt.io/nairobinet
-    timeout: 20
-    requests_per_second: 15
+  # mainnet:
+  #   uri: https://rpc.tzkt.io/archive
+  #   timeout: 20
+  #   requests_per_second: 15
+  # ghostnet:
+  #   uri: https://rpc.tzkt.io/ghostnet
+  #   timeout: 20
+  #   requests_per_second: 15
+  # nairobinet:
+  #   uri: https://rpc.tzkt.io/nairobinet
+  #   timeout: 20
+  #   requests_per_second: 15
   # oxfordnet:
   #   uri: https://rpc.tzkt.io/oxfordnet
   #   timeout: 20
   #   requests_per_second: 20
+  basenet:
+    uri: https://basenet-baking-node.mavryk.network
+    timeout: 20
+    requests_per_second: 20
 
 log_level: ${LOG_LEVEL:-info}
 
 services:
-  mainnet:
-    mempool: https://mempool.dipdup.net/v1/graphql
-  ghostnet:
-    mempool: https://mempool.test.dipdup.net/v1/graphql
-  nairobinet:
-    mempool: https://mempool.test.dipdup.net/v1/graphql
+  # mainnet:
+  #   mempool: https://mempool.dipdup.net/v1/graphql
+  # ghostnet:
+  #   mempool: https://mempool.test.dipdup.net/v1/graphql
+  # nairobinet:
+  #   mempool: https://mempool.test.dipdup.net/v1/graphql
   # oxfordnet:
   #   mempool: https://mempool.test.dipdup.net/v1/graphql
+  basenet:
+    mempool: https://mempool.test.dipdup.net/v1/graphql
 
 storage:
   pg: 
@@ -61,32 +67,37 @@ api:
     mempool_enabled: true
     sandbox_mode: false
     rpc:
-      mainnet: https://rpc.tzkt.io/mainnet
-      ghostnet: https://rpc.tzkt.io/ghostnet
-      nairobinet: https://rpc.tzkt.io/nairobinet
-      # oxfordnet: https://rpc.tzkt.io/oxfordnet       
+      # mainnet: https://rpc.tzkt.io/mainnet
+      # ghostnet: https://rpc.tzkt.io/ghostnet
+      # nairobinet: https://rpc.tzkt.io/nairobinet
+      # oxfordnet: https://rpc.tzkt.io/oxfordnet
+      basenet: https://basenet-baking-node.mavryk.network    
   networks:
-    - mainnet
-    - ghostnet
-    - nairobinet
+    # - mainnet
+    # - ghostnet
+    # - nairobinet
     # - oxfordnet
+    - basenet
 
 indexer:
   project_name: indexer
   sentry_enabled: false
   networks:
-    mainnet:
-      receiver_threads: 5
-    ghostnet:
-      receiver_threads: 5
-    nairobinet:
-      receiver_threads: 15
+    # mainnet:
+    #   receiver_threads: 5
+    # ghostnet:
+    #   receiver_threads: 5
+    # nairobinet:
+    #   receiver_threads: 15
     # oxfordnet:
     #   receiver_threads: 10
+    basenet:
+      receiver_threads: 10
 
 scripts:
   networks:
-    - mainnet
-    - ghostnet
-    - nairobinet
+    # - mainnet
+    # - ghostnet
+    # - nairobinet
     # - oxfordnet
+    - basenet
