--- a/configs/production.yml
+++ b/configs/production.yml
@@ -36,7 +36,7 @@ services:
 
 storage:
   pg: 
-    host: ${DB_HOSTNAME:-127.0.0.1}
+    host: ${DB_HOSTNAME:-db}
     port: 5432
     user: ${POSTGRES_USER}
     dbname: ${POSTGRES_DB:-bcd}
@@ -53,11 +53,11 @@ sentry:
 
 share_path: /etc/bcd
 
-base_url: http://localhost:8080
+base_url: https://better-call.mavryk.io
 
 api:
   project_name: api
-  bind: "127.0.0.1:14000"
+  bind: ":14000"
   cors_enabled: true
   sentry_enabled: false
   seed_enabled: false
@@ -71,7 +71,7 @@ api:
       # ghostnet: https://rpc.tzkt.io/ghostnet
       # nairobinet: https://rpc.tzkt.io/nairobinet
       # oxfordnet: https://rpc.tzkt.io/oxfordnet
-      basenet: https://basenet-baking-node.mavryk.network    
+      basenet: https://basenet-baking-node.mavryk.network
   networks:
     # - mainnet
     # - ghostnet
