--- a/configs/production.yml
+++ b/configs/production.yml
@@ -38,7 +38,7 @@ services:
 
 storage:
   pg: 
-    host: ${DB_HOSTNAME:-127.0.0.1}
+    host: ${DB_HOSTNAME:-db}
     port: 5432
     user: ${POSTGRES_USER}
     dbname: ${POSTGRES_DB:-bcd}
@@ -55,11 +55,11 @@ sentry:
 
 share_path: /etc/bcd
 
-base_url: http://localhost:8080
+base_url: https://better-call.mavryk.io
 
 api:
   project_name: api
-  bind: "127.0.0.1:14000"
+  bind: ":14000"
   cors_enabled: true
   sentry_enabled: false
   seed_enabled: false
