--- a/configs/development.yml
+++ b/configs/development.yml
@@ -19,7 +19,7 @@ services:
   #   mempool: https://mempool.dipdup.net/v1/graphql
   # ghostnet:
   #   mempool: https://mempool.test.dipdup.net/v1/graphql
-  oxfordnet:
+  atlasnet:
     mempool: https://mempool.test.dipdup.net/v1/graphql
 
 storage:
