--- a/internal/postgres/tests/fixtures/accounts.yml
+++ b/internal/postgres/tests/fixtures/accounts.yml
@@ -25,6 +25,15 @@
   events_count: 0
   migrations_count: 0
   ticket_updates_count: 0
+- address: KT1RfKYjLYpGBQ1YGSKoSoYEYwpJPFZrvmwH
+  id: 2
+  last_action: 2022-01-25T17:01:51Z
+  level: 1
+  operations_count: 39
+  type: 1
+  events_count: 0
+  migrations_count: 0
+  ticket_updates_count: 0
 - address: tz28zXKvosLUdFyYZKQU1vPxcedWzjRypApr
   id: 35
   last_action: 2022-01-25T16:45:09Z
