--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 NODE_ENV=development
-VUE_APP_API_URI=https://api-better-call.mavryk.io/v1
+VUE_APP_API_URI=http://localhost:14000/v1
 VUE_APP_IPFS_NODE=https://cloudflare-ipfs.com/
 VUE_APP_SEARCH_SERVICE_URI=https://search.dipdup.net
 VUE_APP_TOKEN_METADATA_API=https://metadata.dipdup.net
@@ -7,4 +7,4 @@ VUE_APP_METADATA_API_URI=https://metadata.dipdup.net
 VUE_APP_MAINNET_STATS_API_URI=https://stats.dipdup.net
 VUE_APP_GHOSTNET_STATS_API_URI=https://stats-ghostnet.dipdup.net
 VUE_APP_TESTNET_STATS_API_URI=https://stats-nairobinet.dipdup.net
-VUE_APP_OXFORDNET_STATS_API_URI=https://stats-oxfordnet.dipdup.net
+VUE_APP_ATLASNET_STATS_API_URI=https://stats-oxfordnet.dipdup.net
