--- a/.github/workflows/build_gui.yml
+++ b/.github/workflows/build_gui.yml
@@ -18,10 +18,10 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to the registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.DOCKER_REGISTRY }}
           username: ${{ github.actor }}
@@ -29,14 +29,15 @@ jobs:
 
       - name: GUI image tags & labels
         id: meta-gui
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_BASE }}-gui
 
       - name: GUI image build & push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           file: build/sandbox/Dockerfile
           build-args: |
             TAG=4.6.6
